can add profile

--- a/src/ScrapsPlus/wwwroot/ngApp/views/register.html
+++ b/src/ScrapsPlus/wwwroot/ngApp/views/register.html
@@ -31,6 +31,22 @@
             <label>Confirm Password:</label>
             <input ng-model="controller.registerUser.confirmPassword" />
         </div>
+        <div>
+            <label>First Name:</label>
+            <input ng-model="controller.registerUser.firstName" />
+        </div>
+        <div>
+            <label>Last Name:</label>
+            <input ng-model="controller.registerUser.lastName" />
+        </div>
+        <div>
+            <label>Date of Birth:</label>
+            <input ng-model="controller.registerUser.dateOfBirth"  placeholder="YYYY/MM/DD HH:MM:SS"/>
+        </div>
+        <div>
+            <label>Recovery Email:</label>
+            <input ng-model="controller.registerUser.recoveryEmail" />
+        </div>
         <input type="submit" value="Register" />
     </form>
 
