--- a/src/ScrapsPlus/Views/Home/Index.cshtml
+++ b/src/ScrapsPlus/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         <div>
           <a href="/">Home</a> /
            <a href="/about">About</a>
-
+            / <a href="/profile">Profile</a>
            / <a href="/secret">Secret</a> /
            <a href="/login" ng-show="!account.isLoggedIn()">Login</a>
            <a href="#" ng-click="account.logout()" ng-show="account.isLoggedIn()">Logout</a>
