membershiplevel and subscription status added to profile view

--- a/src/ScrapsPlus/wwwroot/ngApp/views/profile.html
+++ b/src/ScrapsPlus/wwwroot/ngApp/views/profile.html
@@ -10,7 +10,7 @@
         <p>Address: {{controller.profile.address}}</p>
         <p>Date of Birth: {{controller.profile.dateOfBirth | date}}</p>
         <p>Joined: {{controller.profile.joinDate | date}}</p>
-        <p>Membership Level: {{controller.profile.memberShipLevel}}</p>
+        <p>Membership Level: {{controller.profile.membershipLevel}}</p>
         <p>Subscription Status: {{controller.profile.subscriptionStatus}}</p>
     </div>
 </div>
